# solar_system

./: README.md  solar05.sln
.globaldata/objects/cyborg/: cyborg.dae
.globaldata/objects/earth_02/Model/: Globe.blend  Globe.mtl  untitled.blend
.globaldata/other/: solarsys_constantdata.csv  solarsys_shaderdata.csv  solarsys_texturedata.csv
.globaldata/other/excelFile/: solarsys_constantdata.xlsx  solarsys_shaderdata.xlsx  solarsys_texturedata.xlsx
.globaldata/textures/hdr/: myMilky.ibl
.globaltool/learnopengl/learnopengl/custom/: MyTimer.h  mycamera.h  mycursor.hpp  mymesh.h  mymodel.h  myshader.h
.globaltool/learnopengl/learnopengl/original/: filesystem.h  mesh.h  shader_m.h
.globaltool/mydevelop/mydevelop/: mytools2.h  solartool2.h  solartool2_depricated.txt  text.h
01_SolarSysGenData_PY/: 01_SolarSysGenData_PY.pyproj
01_SolarSysGenData_PY/localdata/xml/: UnitAxes.xml  UnitPlane.xml  UnitSphere.xml
01_SolarSysGenData_PY/localtool/: simulation_algorism.py  simulation_tools.py
01_SolarSysGenData_PY/src/: solar0501_genSolarMotionData.py
02_ReadIn_CPP/.build/: 02_ReadIn_CPP.sln  02_ReadIn_CPP.vcxproj  02_ReadIn_CPP.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLAD.vcxproj  GLAD.vcxproj.filters  STB_IMAGE.vcxproj  STB_IMAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
02_ReadIn_CPP/configuration/: root_directory.h.in  visualstudio.vcxproj.user.in
02_ReadIn_CPP/localdata/xml/: UnitAxesTint.xml  UnitCameraLine.xml
02_ReadIn_CPP/localtool/configuration/configuration/: root_directory.h
02_ReadIn_CPP/shader/: axes.vert  camera.vert  plane.frag  plane.vert  satellite.vert  stella.vert  textquad.frag  textquad.vert
02_ReadIn_CPP/src/: solar0502_ReadIn.cpp
03_AlgorismInside_CPP/: CMakeLists.txt
03_AlgorismInside_CPP/.build/: 03_AlgorismInside_CPP.sln  03_AlgorismInside_CPP.vcxproj  03_AlgorismInside_CPP.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLAD.vcxproj  GLAD.vcxproj.filters  STB_IMAGE.vcxproj  STB_IMAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
03_AlgorismInside_CPP/localdata/xml/: UnitCube.xml  UnitCylinder.xml  UnitLine.xml
03_AlgorismInside_CPP/localtool/configuration/configuration/: root_directory.h
03_AlgorismInside_CPP/shader/: axes.frag  camera.frag  line.frag  line.vert  planet.frag  planet.vert  satellite.frag  star.frag  star.vert  starshiny.vert  text.frag  text.vert
03_AlgorismInside_CPP/src/: solar0503_AlgorismInside.cpp
